Se maqueto y se creo la carpeta img

--- a/index.html
+++ b/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>UNCOMPA</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="https://kit.fontawesome.com/6b26613874.js" crossorigin="anonymous"></script>
+	</head>
+	<body>
+        <div class="grid__container">
+            <header>
+                <div class="logo">
+                    <div class="U__icon"><i class="fa-solid fa-u"></i></div>
+                    <h1>UNCOMPA</h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li class="items"></li>
+                        <li class="items"></li>
+                        <li class="items"></li>
+                        <li class="items"></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <div class="container">
+                    <h2>Mi blog</h2>
+                </div>
+                <div class="container">
+                    <img src="" alt="Imagen1">
+                </div>
+            </main>
+            <aside>
+                <p>Mira esto</p>
+                <p>Mira esto</p>
+                <p>Mira esto</p>
+                <p>Mira esto</p>
+            </aside>
+            <section>
+                <h3>Presentacion</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, molestiae doloremque ipsam totam molestias odio consequatur ut deserunt rerum incidunt ea delectus alias labore vel explicabo quibusdam accusantium nostrum quam!</p>
+            </section>
+            <footer>Contacts</footer>
+        </div>
+	</body>
+    <script src="./main.js"></script>
 </html>
