--- a/index.html
+++ b/index.html
@@ -4,45 +4,53 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>UNCOMPA</title>
-        <link rel="stylesheet" href="style.css">
-        <script src="https://kit.fontawesome.com/6b26613874.js" crossorigin="anonymous"></script>
+		<link rel="stylesheet" href="style.css" />
+		<script
+			src="https://kit.fontawesome.com/6b26613874.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
-        <div class="grid__container">
+		<div class="grid__container">
             <header>
-                <div class="logo">
+                <button class="toggle" aria-label="Abrir menu" tabindex="2"><i class="fa-solid fa-bars"></i></button>
+				<div class="logo">
                     <div class="U__icon"><i class="fa-solid fa-u"></i></div>
-                    <h1>UNCOMPA</h1>
-                </div>
-                <nav>
-                    <ul>
-                        <li class="items"></li>
-                        <li class="items"></li>
-                        <li class="items"></li>
-                        <li class="items"></li>
-                    </ul>
-                </nav>
-            </header>
-            <main>
-                <div class="container">
-                    <h2>Mi blog</h2>
-                </div>
-                <div class="container">
-                    <img src="" alt="Imagen1">
-                </div>
-            </main>
-            <aside>
-                <p>Mira esto</p>
-                <p>Mira esto</p>
-                <p>Mira esto</p>
-                <p>Mira esto</p>
-            </aside>
-            <section>
-                <h3>Presentacion</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat, molestiae doloremque ipsam totam molestias odio consequatur ut deserunt rerum incidunt ea delectus alias labore vel explicabo quibusdam accusantium nostrum quam!</p>
-            </section>
-            <footer>Contacts</footer>
-        </div>
+					<h1>UNCOMPA</h1>
+				</div>
+                <h2>Blog</h2>
+                <nav class="nav">
+                    <ul class="nav__ul">
+                        <li class="ul__items"><a href="#" class="a_item">Inicio</a></li>
+						<li class="ul__items"><a href="#" class="a_item">Contenidos</a></li>
+						<li class="ul__items"><a href="#" class="a_item">Destacados</a></li>
+						<li class="ul__items"><a href="#" class="a_item">Contactos</a></li>
+					</ul>
+				</nav>
+			</header>
+			<main>
+				<div class="container">
+					<h2>Mi blog</h2>
+				</div>
+				<div class="container">
+					<img src="" alt="Imagen1" />
+				</div>
+			</main>
+			<aside>
+				<p>Mira esto</p>
+				<p>Mira esto</p>
+				<p>Mira esto</p>
+				<p>Mira esto</p>
+			</aside>
+			<section>
+				<h3>Presentacion</h3>
+				<p>
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat,
+					molestiae doloremque ipsam totam molestias odio consequatur ut
+					deserunt rerum incidunt ea delectus alias labore vel explicabo
+					quibusdam accusantium nostrum quam!
+				</p>
+			</section>
+			<footer>Contacts</footer>
+		</div>
 	</body>
-    <script src="./main.js"></script>
+	<script src="./main.js"></script>
 </html>
