Se agrego menu desplegable

--- a/index.html
+++ b/index.html
@@ -17,7 +17,20 @@
 					<h1>UNCOMPA</h1>
 				</div>
                 <h2>Blog</h2>
-                <nav class="nav">
+				<nav class="nav nav__deplegable">
+					<ul class="menu">
+						<li>
+							<a href="" class="a_item">Ver más<i class="fa-solid fa-chevron-down"></i></a>
+							<ul class="menu__vertical">
+								<li><a href="#">Inicio</a></li>
+								<li><a href="#">Contenido</a></li>
+								<li><a href="#">Destacados</a></li>
+								<li><a href="#">Contactos</a></li>
+							</ul>
+						</li>
+					</ul>
+				</nav>
+                <nav class="nav nav__burger">
                     <ul class="nav__ul">
                         <li class="ul__items"><a href="#" class="a_item">Inicio</a></li>
 						<li class="ul__items"><a href="#" class="a_item">Contenidos</a></li>
@@ -36,6 +49,7 @@
 				</div>
 			</main>
 			<aside>
+				<p>Mira esto</p>
 				<p>Mira esto</p>
 				<p>Mira esto</p>
 			</aside>
