Se acabo la plantilla de la pagina

--- a/index.html
+++ b/index.html
@@ -49,9 +49,23 @@
 				</div>
 			</main>
 			<aside>
-				<p>Mira esto</p>
-				<p>Mira esto</p>
-				<p>Mira esto</p>
+				<h3>Mas contenido:</h3>
+				<div class="more__content">
+					<div class="more__item"></div>
+					<div class="more__item"></div>
+					<div class="more__item"></div>
+					<div class="more__item"></div>
+					<div class="more__item"></div>
+					<div class="more__item"></div>
+				</div>
+				<h3>Etiquetas:</h3>
+				<ul class="tag__content">
+					<li class="tag"><i class="fa-solid fa-magnifying-glass"></i>HTML</li>
+					<li class="tag"><i class="fa-solid fa-magnifying-glass"></i>JS</li>
+					<li class="tag"><i class="fa-solid fa-magnifying-glass"></i>CSS</li>
+					<li class="tag"><i class="fa-solid fa-magnifying-glass"></i>REACT</li>
+					<li class="tag"><i class="fa-solid fa-magnifying-glass"></i>VUE</li>
+				</ul>
 			</aside>
 			<section>
 				<h3>El Novato del Código a la Carga 🚀</h3>
@@ -66,7 +80,31 @@
 				<p>El desarrollo web es como una galaxia en constante expansión. Vamos a mirar a las estrellas y descubrir las tendencias más actuales: desde cómo la inteligencia artificial está revolucionando los sitios web hasta cómo la realidad virtual está a punto de cambiar la forma en que experimentamos la web.</p> <br> <br>
 				<p>¿Listos para zarpar en este viaje emocionante y a veces confuso a través del desarrollo web? <br> No importa si eres un novato que apenas comienza a tejer sus primeras líneas de código o un veterano que está buscando un nuevo truco,<br> ¡estás en el lugar correcto! Deja tus preguntas, ocurrencias y emojis de programación mientras juntos exploramos las maravillas del ciberespacio. <br> ¡Agárrense los cinturones de seguridad y prepárense para un despegue lleno de códigos y creatividad! ¡Nos leemos en la próxima bitácora digital!</p>
 			</section>
-			<footer>Contacts</footer>
+			<footer>
+				<div class="logo-2">
+                    <div class="U__icon-2"><i class="fa-solid fa-u"></i></div>
+					<h4>UNCOMPA</h4>
+				</div>
+				<div class="sobre__mi">
+					<div class="contacs">
+						<h5>Contactos</h5>
+						<div class="icons">
+							<button class="icon-1"><i class="fa-brands fa-github"></i></button>
+							<button class="icon-2"><i class="fa-brands fa-linkedin"></i></button>
+							<button class="icon-3"><i class="fa-solid fa-envelope"></i></button>
+						</div>
+					</div>
+					<div class="redes">
+						<h5>Redes sociales</h5>
+						<div class="icons">
+							<button class="icon-4"><i class="fa-brands fa-facebook"></i></button>
+							<button class="icon-5"><i class="fa-brands fa-tiktok"></i></button>
+							<button class="icon-6"><i class="fa-brands fa-youtube"></i></button>
+							<button class="icon-7"><i class="fa-brands fa-instagram"></i></button>
+						</div>
+					</div>
+				</div>
+			</footer>
 		</div>
 	</body>
 	<script src="./main.js"></script>
